Fix Post button on iOS Safari.

--- a/_sass/_gh-comments.scss
+++ b/_sass/_gh-comments.scss
@@ -6,6 +6,7 @@ input[type=submit].hacky-post-button {
     font-size: 16px;
     cursor:pointer;
     -webkit-border-radius: 5px;
+    -webkit-appearance: none;
     border-radius: 5px;
     border: 2px solid black;
 
